opencv includes + blackAndWhite method

--- a/PhotoBooth/PhotoBooth.vcxproj.filters
+++ b/PhotoBooth/PhotoBooth.vcxproj.filters
@@ -235,4 +235,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\Users\Amine\Desktop\Lenna.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
