adding video to welcome screen

--- a/PhotoBooth/PhotoBooth.vcxproj.filters
+++ b/PhotoBooth/PhotoBooth.vcxproj.filters
@@ -185,6 +185,15 @@
     <ClCompile Include="GeneratedFiles\Release\moc_AbstractView.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="qvideoview.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_qvideoview.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_qvideoview.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="photobooth.h">
@@ -243,6 +252,12 @@
     </CustomBuild>
     <CustomBuild Include="AbstractView.h">
       <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="qvideoview.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="qvideoview.ui">
+      <Filter>Form Files</Filter>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
@@ -303,9 +318,6 @@
     <ClInclude Include="ViewFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="GeneratedFiles\ui_mainwindow.h">
-      <Filter>Generated Files</Filter>
-    </ClInclude>
     <ClInclude Include="GeneratedFiles\ui_photobooth.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
@@ -325,6 +337,12 @@
       <Filter>Generated Files</Filter>
     </ClInclude>
     <ClInclude Include="GeneratedFiles\ui_photoprintformat.h">
+      <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GeneratedFiles\ui_qvideoview.h">
+      <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GeneratedFiles\ui_mainwindow.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
   </ItemGroup>
